syntax = "proto3";

package db.meta;

import "google/protobuf/empty.proto";

service ClientManagement {
    // Initializes a new client.
    //
    // This should be called once by a client and then the client should pass the returned
    // session_id as metadata to all future requests.
    rpc NewClient (google.protobuf.Empty) returns (NewClientResponse);

}

message NewClientResponse {
    string client_id = 1;
}

